Revision history for PostgreSQL extension semver.

0.2.1
      - Fixed the metadata file to reflect that the "pair" extension is not
        included in the semver distribution.
      - Added abstract and doc file to the `provides` section of `META.json`.

0.2.0 2011-02-05T19:32:49
      - Converted to a native type implemented in C by Sam Vilain. While David
        was at lunch, no less.
      - As a consequence, `USING` is no longer required in an `ORDER BY`
        clause to get proper semver sort ordering.
      - Added casts from nuermic types.
      - Renamed `clean_semver()` to `to_semver()`.

0.1.0  2010-10-07 18:31:43
      - Initial version.
      - Implementation in pure PL/pgSQL.
      - Included in [PGXN Manager](https://github.com/theory/pgxn-manager).
      - Not otherwise released.