@@ -3,7 +3,7 @@
 tmpdir=${tmpdir-`pwd`/tmp}
 pgbin=/usr/lib/postgresql/9.0/bin
 
-make USE_PGXS=0 || exit 1
+make || exit 1
 
 [ -f $tmpdir/postmaster.pid ] && PGDATA=$tmpdir $pgbin/pg_ctl stop -m immediate >/dev/null 2>&1
 [ -d $tmpdir ] && rm -rf $tmpdir
